[project]
name = "polymarket-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "feedparser>=6.0.0",
    "git-filter-repo>=2.47.0",
    "openrouter",
    "httpx>=0.27.0",
    "py-clob-client>=0.34.6",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tweepy>=4.14.0",
    "websockets>=12.0",
]
